--- a/app/assets/pages/profile/profile.html
+++ b/app/assets/pages/profile/profile.html
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4" ng-show="!modoEdit">
+                <div class="col-lg-4 col-sm-4" ng-show="!modoEdit">
                     <div class="card card-profile" >
                         <div style="position: relative;">
                             <div class="card-avatar" >
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6 col-sm-8">
                     <div class="card">
                         <div class="card-header card-chart" data-background-color="purple">
                             <div class="row">
@@ -190,7 +190,7 @@
                         </div> -->
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4 col-sm-8">
                     <div class="card ">
                         <div class="card-header" data-background-color="orange">
                             <i class="material-icons">mail_outline</i> <span>Mensaje al administrador</span>
